[gd_scene load_steps=6 format=3 uid="uid://td7p6y84uh5c"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_nx0qv"]
[ext_resource type="Texture2D" uid="uid://o21p0vakhgar" path="res://Graphics/UI/Button.png" id="2_3jnqh"]
[ext_resource type="Texture2D" uid="uid://u8ib2nc2pg6u" path="res://Graphics/UI/ButtonHover.png" id="3_twb1p"]
[ext_resource type="FontFile" uid="uid://dg5fsfbdfldpf" path="res://Fonts/PixelifySans-Regular.ttf" id="4_rdndg"]
[ext_resource type="TileSet" uid="uid://mi2fnic3oi4f" path="res://tileset.tres" id="5_ymti5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_nx0qv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartButton" type="TextureButton" parent="CanvasLayer"]
visible = false
modulate = Color(1, 0.678431, 0.690196, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -91.0
offset_right = 72.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_3jnqh")
texture_hover = ExtResource("3_twb1p")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/RestartButton"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rdndg")
theme_override_font_sizes/font_size = 26
text = "Restart"

[node name="View Story Button" type="TextureButton" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 0.627451, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -155.0
offset_right = 82.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_3jnqh")
texture_hover = ExtResource("3_twb1p")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/View Story Button"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rdndg")
theme_override_font_sizes/font_size = 26
text = "View Story"

[node name="PlayButton" type="TextureButton" parent="CanvasLayer"]
modulate = Color(0.623529, 1, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -27.0
offset_right = 68.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_3jnqh")
texture_hover = ExtResource("3_twb1p")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/PlayButton"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rdndg")
theme_override_font_sizes/font_size = 26
text = "Play"

[node name="Quit Button" type="TextureButton" parent="CanvasLayer"]
modulate = Color(1, 0.290196, 0.282353, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 35.0
offset_right = 66.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_3jnqh")
texture_hover = ExtResource("3_twb1p")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Quit Button"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_rdndg")
theme_override_font_sizes/font_size = 26
text = "Quit"

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_right = 90.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_rdndg")
theme_override_font_sizes/font_size = 101
text = "Rough Weather"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_ymti5")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(1114115, 131072, 0, 1179651, 131072, 0, 1245187, 131072, 0, 1310723, 131072, 0, 1114116, 131072, 0, 1179652, 131072, 0, 1245188, 131072, 0, 1310724, 131072, 0, 1114117, 131072, 0, 1179653, 131072, 0, 1245189, 131072, 0, 1310725, 131072, 0, 1114118, 131072, 0, 1179654, 131072, 0, 1245190, 131072, 0, 1310726, 131072, 0, 1114119, 131072, 0, 1179655, 131072, 0, 1245191, 131072, 0, 1310727, 131072, 0, 1114120, 131072, 0, 1179656, 131072, 0, 1245192, 131072, 0, 1310728, 131072, 0, 1114121, 131072, 0, 1179657, 131072, 0, 1245193, 131072, 0, 1310729, 131072, 0, 1114122, 131072, 0, 1179658, 131072, 0, 1245194, 131072, 0, 1310730, 131072, 0, 1114123, 131072, 0, 1179659, 131072, 0, 1245195, 131072, 0, 1310731, 131072, 0, 1114124, 131072, 0, 1179660, 131072, 0, 1245196, 131072, 0, 1310732, 131072, 0, 1114125, 131072, 0, 1179661, 131072, 0, 1245197, 131072, 0, 1310733, 131072, 0, 1114126, 131072, 0, 1179662, 131072, 0, 1245198, 131072, 0, 1310734, 131072, 0, 1114127, 131072, 0, 1179663, 131072, 0, 1245199, 131072, 0, 1310735, 131072, 0, 1114128, 131072, 0, 1179664, 131072, 0, 1245200, 131072, 0, 1310736, 131072, 0, 1114129, 131072, 0, 1179665, 131072, 0, 1245201, 131072, 0, 1310737, 131072, 0, 1114130, 131072, 0, 1179666, 131072, 0, 1245202, 131072, 0, 1310738, 131072, 0, 1114131, 131072, 0, 1179667, 131072, 0, 1245203, 131072, 0, 1310739, 131072, 0, 1114132, 131072, 0, 1179668, 131072, 0, 1245204, 131072, 0, 1310740, 131072, 0, 1114133, 131072, 0, 1179669, 131072, 0, 1245205, 131072, 0, 1310741, 131072, 0, 1114134, 131072, 0, 1179670, 131072, 0, 1245206, 131072, 0, 1310742, 131072, 0, 1114135, 131072, 0, 1179671, 131072, 0, 1245207, 131072, 0, 1310743, 131072, 0, 1114136, 131072, 0, 1179672, 131072, 0, 1245208, 131072, 0, 1310744, 131072, 0, 1114137, 131072, 0, 1179673, 131072, 0, 1245209, 131072, 0, 1310745, 131072, 0, 1114138, 196608, 0, 1179674, 131072, 0, 1245210, 131072, 0, 1310746, 131072, 0, 1114139, 196608, 0, 1179675, 131072, 0, 1245211, 196608, 0, 1310747, 131072, 0, 1114140, 196608, 0, 1179676, 196608, 0, 1245212, 196608, 0, 1310748, 131072, 0, 1114141, 196608, 0, 1179677, 196608, 0, 1245213, 196608, 0, 1310749, 196608, 0, 1114142, 196608, 0, 1179678, 196608, 0, 1245214, 196608, 0, 1310750, 196608, 0, 1114143, 196608, 0, 1179679, 196608, 0, 1245215, 196608, 0, 1310751, 196608, 0, 1114144, 196608, 0, 1179680, 196608, 0, 1245216, 196608, 0, 1310752, 196608, 0, 1114145, 196608, 0, 1179681, 196608, 0, 1245217, 196608, 0, 1310753, 196608, 0, 1114146, 196608, 0, 1179682, 196608, 0, 1245218, 196608, 0, 1310754, 196608, 0, 1114147, 196608, 0, 1179683, 196608, 0, 1245219, 196608, 0, 1310755, 196608, 0, 1048588, 131072, 0, 1048587, 131072, 0, 1048586, 131072, 0, 983050, 131072, 0, 983049, 131072, 0, 983048, 131072, 0, 917512, 131072, 0, 917511, 131072, 0, 917510, 131072, 0, 851974, 0, 0, 851973, 0, 0, 851972, 0, 0, 851971, 131072, 0, 786435, 0, 0, 786434, 131072, 0, 720898, 0, 0, 720897, 0, 0, 786433, 131072, 0, 851969, 131072, 0, 917505, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 851968, 131072, 0, 917504, 131072, 0, 983040, 131072, 0, 1048576, 131072, 0, 1114112, 131072, 0, 1179649, 131072, 0, 1114113, 131072, 0, 1048577, 131072, 0, 983041, 131072, 0, 1114114, 131072, 0, 1179650, 131072, 0, 1245185, 131072, 0, 1310721, 131072, 0, 1310720, 131072, 0, 1245184, 131072, 0, 1310719, 131072, 0, 1245183, 131072, 0, 1245186, 131072, 0, 1179648, 131072, 0, 1310722, 131072, 0, 1376258, 131072, 0, 1048609, 196608, 0, 1048610, 196608, 0, 1048608, 196608, 0, 1048606, 196608, 0, 983071, 196608, 0, 983072, 196608, 0, 917536, 196608, 0, 917537, 196608, 0, 852002, 196608, 0, 786466, 196608, 0, 786467, 196608, 0, 852003, 196608, 0, 917539, 196608, 0, 983074, 196608, 0, 917538, 196608, 0, 1048607, 196608, 0, 983073, 196608, 0, 983075, 196608, 0, 1048611, 196608, 0, 1048602, 196608, 0, 1048603, 196608, 0, 1048604, 196608, 0, 983069, 196608, 0, 983070, 196608, 0, 917534, 196608, 0, 917535, 196608, 0, 917533, 196608, 0, 983068, 196608, 0, 1048601, 196608, 0, 1048600, 131072, 0, 1048599, 131072, 0, 983066, 196608, 0, 917531, 196608, 0, 917532, 196608, 0, 851997, 196608, 0, 851998, 196608, 0, 851999, 196608, 0, 852000, 196608, 0, 983067, 196608, 0, 786464, 196608, 0, 786465, 196608, 0, 786463, 196608, 0, 720928, 196608, 0, 720929, 196608, 0, 1048605, 196608, 0, 720930, 196608, 0, 655395, 196608, 0, 720931, 196608, 0, 852001, 196608, 0, 655394, 196608, 0, 589859, 196608, 0, 524323, 196608, 0, 655393, 196608, 0, 786462, 196608, 0, 851996, 196608, 0, 917530, 196608, 0, 917529, 196608, 0, 983064, 131072, 0, 983063, 196608, 0, 983062, 131072, 0, 1048597, 131072, 0, 1048596, 131072, 0, 1048595, 131072, 0, 1048585, 131072, 0, 1048589, 131072, 0, 1048590, 131072, 0, 1048594, 131072, 0, 1048593, 131072, 0, 1048592, 131072, 0, 1048591, 131072, 0, 983055, 0, 0, 983056, 131072, 0, 983057, 0, 0, 983058, 131072, 0, 983059, 0, 0, 983060, 131072, 0, 983061, 131072, 0, 983065, 196608, 0, 1048598, 131072, 0, 983054, 131072, 0, 983053, 131072, 0, 983052, 131072, 0, 983051, 131072, 0, 917513, 131072, 0, 786436, 0, 0, 655360, 0, 0, 720895, 131072, 0, 655358, 131072, 0, 720894, 131072, 0, 851970, 131072, 0, 917507, 131072, 0, 983044, 131072, 0, 983045, 131072, 0, 1048581, 131072, 0, 1048582, 131072, 0, 1048583, 131072, 0, 983046, 131072, 0, 917506, 131072, 0, 917508, 131072, 0, 917509, 131072, 0, 983047, 131072, 0, 1048584, 131072, 0, 983043, 131072, 0, 1048580, 131072, 0, 1048579, 131072, 0, 983042, 131072, 0, 1048578, 131072, 0, 1376257, 131072, 0, 1376256, 131072, 0, 1376260, 131072, 0, 1376261, 131072, 0, 1376262, 131072, 0, 1376263, 131072, 0, 1376264, 131072, 0, 1376265, 131072, 0, 1376266, 131072, 0, 1376267, 131072, 0, 1376268, 131072, 0, 1376269, 131072, 0, 1376270, 131072, 0, 1376271, 131072, 0, 1376272, 131072, 0, 1376273, 131072, 0, 1376274, 131072, 0, 1376275, 131072, 0, 1376276, 131072, 0, 1376277, 131072, 0, 1376278, 131072, 0, 1376279, 131072, 0, 1376280, 131072, 0, 1376281, 131072, 0, 1376282, 131072, 0, 1376283, 131072, 0, 1376284, 131072, 0, 1376289, 196608, 0, 1376288, 196608, 0, 1376287, 196608, 0, 1376286, 196608, 0, 1376285, 196608, 0, 1376290, 196608, 0, 1376291, 196608, 0, 458787, 196608, 0, 393251, 196608, 0, 327715, 196608, 0, 262179, 196608, 0, 196643, 196608, 0, 131107, 196608, 0, 65571, 196608, 0, 35, 196608, 0, 34, 196608, 0, 33, 0, 0, 32, 0, 0, 31, 0, 0, 30, 0, 0, 29, 0, 0, 28, 0, 0, 27, 0, 0, 26, 0, 0, 25, 0, 0, 24, 0, 0, 23, 0, 0, 22, 0, 0, 21, 0, 0, 20, 0, 0, 19, 0, 0, 18, 0, 0, 17, 0, 0, 16, 0, 0, 15, 0, 0, 14, 0, 0, 13, 0, 0, 12, 0, 0, 11, 0, 0, 10, 0, 0, 9, 0, 0, 8, 0, 0, 7, 0, 0, 6, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 65536, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 65536, 0, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 0, 458752, 0, 0, 524289, 0, 0, 589825, 0, 0, 589824, 0, 0, 524288, 0, 0, 262150, 65536, 0, 786441, 131072, 0, 720905, 0, 0, 655369, 0, 0, 589833, 0, 0, 524297, 0, 0, 458761, 0, 0, 393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 65536, 0, 131081, 0, 0, 65545, 0, 0, 65544, 65536, 0, 65543, 65536, 0, 65542, 0, 0, 65541, 0, 0, 65540, 65536, 0, 65539, 65536, 0, 65538, 65536, 0, 65537, 65536, 0, 131073, 65536, 1, 131072, 65536, 0, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 0, 458754, 65536, 1, 393218, 65536, 1, 327682, 65536, 1, 262146, 65536, 1, 196610, 65536, 1, 131074, 65536, 1, 131075, 65536, 1, 196611, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 458755, 65536, 1, 524291, 65536, 1, 524290, 65536, 0, 589826, 0, 0, 655362, 0, 0, 655361, 0, 0, 655363, 0, 0, 589827, 65536, 0, 589828, 65536, 0, 524292, 65536, 1, 458756, 65536, 1, 393220, 65536, 1, 327684, 65536, 1, 262148, 65536, 1, 196612, 65536, 1, 131076, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 1, 327685, 65536, 1, 393221, 65536, 1, 458757, 65536, 1, 524293, 65536, 0, 589829, 65536, 0, 655365, 0, 0, 655364, 0, 0, 720900, 0, 0, 720899, 0, 0, 720901, 0, 0, 786437, 0, 0, 786438, 0, 0, 720902, 0, 0, 655366, 0, 0, 589830, 0, 0, 524294, 65536, 0, 458758, 65536, 0, 393222, 65536, 0, 327686, 65536, 1, 327687, 65536, 0, 262151, 65536, 0, 196615, 0, 0, 131079, 0, 0, 131078, 0, 0, 196614, 65536, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 393223, 65536, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 131072, 0, 851976, 131072, 0, 786440, 0, 0, 720904, 0, 0, 655368, 0, 0, 589832, 0, 0, 524296, 0, 0, 458760, 0, 0, 851977, 131072, 0, 851978, 131072, 0, 786442, 131072, 0, 720906, 0, 0, 655370, 0, 0, 589834, 0, 0, 524298, 0, 0, 458762, 0, 0, 393226, 0, 0, 327690, 0, 0, 262154, 0, 0, 196618, 65536, 0, 131082, 65536, 0, 65546, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 65536, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786443, 0, 0, 851979, 0, 0, 917515, 131072, 0, 917514, 131072, 0, 917516, 0, 0, 851980, 131072, 0, 786444, 0, 0, 720908, 0, 0, 655372, 0, 0, 589836, 0, 0, 524300, 0, 0, 458764, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 196620, 65536, 0, 131084, 0, 0, 65548, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 65536, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 786445, 0, 0, 851981, 0, 0, 917517, 0, 0, 917518, 131072, 0, 851982, 0, 0, 786446, 0, 0, 720910, 0, 0, 655374, 0, 0, 589838, 0, 0, 524302, 0, 0, 458766, 0, 0, 393230, 0, 0, 327694, 0, 0, 262158, 0, 0, 196622, 0, 0, 131086, 0, 0, 65550, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 917520, 131072, 0, 851984, 131072, 0, 786448, 0, 0, 720912, 0, 0, 655376, 0, 0, 589840, 0, 0, 524304, 0, 0, 458768, 0, 0, 393232, 0, 0, 327696, 0, 0, 262160, 0, 0, 196624, 0, 0, 131088, 65536, 0, 65552, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 786449, 0, 0, 851985, 0, 0, 917521, 131072, 0, 917522, 0, 0, 851986, 0, 0, 786450, 0, 0, 720914, 0, 0, 655378, 0, 0, 589842, 0, 0, 524306, 0, 0, 458770, 0, 0, 393234, 0, 0, 327698, 0, 0, 262162, 0, 0, 196626, 0, 0, 131090, 0, 0, 65554, 0, 0, 65555, 65536, 0, 131091, 65536, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 0, 0, 917523, 0, 0, 917524, 196608, 0, 851988, 0, 0, 786452, 0, 0, 720916, 0, 0, 655380, 0, 0, 589844, 0, 0, 524308, 0, 0, 458772, 0, 0, 393236, 0, 0, 327700, 0, 0, 262164, 0, 0, 196628, 0, 0, 131092, 0, 0, 65556, 65536, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 196608, 0, 917525, 196608, 0, 917526, 196608, 0, 851990, 196608, 0, 786454, 196608, 0, 720918, 0, 0, 655382, 0, 0, 589846, 0, 0, 524310, 0, 0, 458774, 0, 0, 393238, 0, 0, 327702, 0, 0, 262166, 0, 0, 196630, 0, 0, 131094, 0, 0, 65558, 0, 0, 65559, 0, 0, 131095, 0, 0, 196631, 0, 0, 262167, 0, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 196608, 0, 851991, 196608, 0, 917527, 196608, 0, 917528, 196608, 0, 851992, 196608, 0, 786456, 0, 0, 720920, 0, 0, 655384, 0, 0, 589848, 0, 0, 524312, 0, 0, 458776, 0, 0, 393240, 0, 0, 327704, 0, 0, 262168, 0, 0, 196632, 0, 0, 131096, 0, 0, 65560, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 196608, 0, 851993, 196608, 0, 851994, 196608, 0, 786458, 196608, 0, 720922, 0, 0, 655386, 0, 0, 589850, 196608, 0, 524314, 0, 0, 458778, 0, 0, 393242, 0, 0, 327706, 0, 0, 262170, 0, 0, 196634, 0, 0, 131098, 0, 0, 65562, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 0, 0, 458779, 0, 0, 524315, 0, 0, 589851, 0, 0, 655387, 0, 0, 720923, 196608, 0, 786459, 196608, 0, 851995, 196608, 0, 786460, 196608, 0, 720924, 196608, 0, 655388, 0, 0, 589852, 0, 0, 524316, 196608, 0, 458780, 0, 0, 393244, 0, 0, 327708, 0, 0, 262172, 0, 0, 196636, 0, 0, 131100, 0, 0, 65564, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 0, 0, 327709, 0, 0, 393245, 0, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 196608, 0, 720925, 196608, 0, 786461, 196608, 0, 720926, 196608, 0, 655390, 196608, 0, 589854, 196608, 0, 524318, 0, 0, 458782, 0, 0, 393246, 196608, 0, 327710, 0, 0, 262174, 0, 0, 196638, 0, 0, 131102, 0, 0, 65566, 0, 0, 65567, 0, 0, 131103, 0, 0, 196639, 196608, 0, 262175, 196608, 0, 327711, 196608, 0, 393247, 196608, 0, 458783, 196608, 0, 524319, 196608, 0, 589855, 196608, 0, 655391, 196608, 0, 720927, 196608, 0, 655392, 196608, 0, 589856, 196608, 0, 524320, 196608, 0, 458784, 196608, 0, 393248, 196608, 0, 327712, 196608, 0, 262176, 196608, 0, 196640, 196608, 0, 131104, 196608, 0, 65568, 196608, 0, 65569, 0, 0, 131105, 196608, 0, 196641, 196608, 0, 262177, 196608, 0, 327713, 196608, 0, 393249, 196608, 0, 458785, 196608, 0, 524321, 196608, 0, 589857, 196608, 0, 589858, 196608, 0, 524322, 196608, 0, 458786, 196608, 0, 393250, 196608, 0, 327714, 196608, 0, 262178, 196608, 0, 196642, 196608, 0, 131106, 196608, 0, 65570, 196608, 0, 1441798, 131072, 0, 1441797, 131072, 0, 1441796, 131072, 0, 1441795, 131072, 0, 1376259, 131072, 0, 589823, 131072, 0, 524287, 0, 0, 458751, 0, 0, 393215, 65536, 0, 327679, 65536, 0, 655359, 0, 0)

[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/View Story Button" to="." method="_on_view_story_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit Button" to="." method="_on_quit_button_pressed"]
